--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@fontsource/roboto": "^5.0.3",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
+    "formik": "^2.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
-    "sweetalert2": "^11.7.20"
+    "react-toastify": "^9.1.3",
+    "sweetalert2": "^11.7.20",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
